--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,15 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "node": 7
+    [
+      "env",
+      {
+        "targets": {
+          "node": 7
+        }
       }
-    }]
+    ]
+  ],
+  "plugins": [
+    "transform-object-rest-spread"
   ]
 }
