--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "a sample for the output of the project starter module",
   "main": "server/app.js",
   "scripts": {
-    "dev": "run-p server-dev open",
-    "open": "opn http://localhost:9393",
-    "server-dev": "nodemon -L --exec \"babel-node\" --watch server server/app.js",
-    "prod": "npm run build && nodemon dist/server/app.js",
     "test": "npm run lint",
+    "babel": "babel server -d dist/server -s",
+    "build": "rimraf dist && npm run babel && npm run build-client && ncp package.json dist/package.json",
+    "build-client": "webpack --env=production --define process.env.NODE_ENV=\"'production'\"",
     "lint": "run-p lint-*",
-    "lint-server": "eslint server --fix",
-    "lint-plop": "eslint plopfile.babel.js plop --fix",
     "precommit": "lint-staged",
     "commitmsg": "validate-commit-msg",
-    "babel": "babel server -d dist/server -s",
-    "plop": "plop",
-    "build": "rimraf lib && npm run babel && ncp package.json dist/package.json"
+    "lint-server": "eslint server --fix",
+    "lint-client": "eslint client --fix",
+    "dev": "run-p client-dev server-dev",
+    "server-dev": "nodemon --watch server --exec \"babel-node\" server/app.js",
+    "client-dev": "webpack-dev-server --open",
+    "prod": "npm run build && node dist/server/app.js"
   },
   "repository": {
     "type": "git",
@@ -40,22 +40,50 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
+    "axios": "^0.16.0",
+    "babel-cli": "^6.24.0",
     "babel-istanbul": "^0.11.0",
-    "babel-preset-env": "^0.0.9",
-    "babel-register": "^6.18.0",
-    "eslint": "^3.11.1",
-    "eslint-config-noamokman": "^5.0.1",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "0.0.9",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.24.0",
+    "babili-webpack-plugin": "0.0.11",
+    "css-loader": "^0.28.0",
+    "eslint": "^3.19.0",
+    "eslint-config-noamokman": "^5.2.0",
+    "eslint-plugin-react": "^6.10.3",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
     "husky": "^0.11.9",
-    "lint-staged": "3.0.3",
+    "lint-staged": "^3.0.3",
+    "material-ui": "^0.17.1",
+    "mdi": "^1.9.33",
     "nodemon": "^1.11.0",
     "npm-run-all": "^3.1.2",
     "opn-cli": "^3.1.0",
     "plop": "^1.7.2",
     "plur": "^2.1.2",
-    "rimraf": "^2.5.4",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.8",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-async-connect": "^1.0.0-rc4",
+    "redux-auth-wrapper": "^1.0.0",
+    "redux-devtools": "^3.3.2",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0",
+    "redux-simple-promise": "^2.0.2",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.16.1",
     "uppercamelcase": "^1.1.0",
-    "validate-commit-msg": "^2.8.2"
+    "validate-commit-msg": "^2.12.1",
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
