chore(test): added jest framework for testing

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a sample for the output of the project starter module",
   "main": "server/app.js",
   "scripts": {
-    "test": "npm run lint",
+    "test": "npm run lint && npm run jest",
+    "jest": "jest",
     "babel": "babel server -d dist/server -s",
     "build": "rimraf dist && npm run babel && npm run build-client && ncp package.json dist/package.json",
     "build-client": "webpack --env=production --define process.env.NODE_ENV=\"'production'\"",
@@ -44,6 +45,7 @@
     "axios": "^0.16.0",
     "babel-cli": "^6.24.0",
     "babel-istanbul": "^0.11.0",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "0.0.9",
@@ -58,6 +60,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.11.9",
+    "jest": "^19.0.2",
     "lint-staged": "^3.0.3",
     "material-ui": "^0.17.1",
     "mdi": "^1.9.33",
@@ -81,6 +84,7 @@
     "redux-simple-promise": "^2.0.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.16.1",
+    "supertest": "^3.0.0",
     "uppercamelcase": "^1.1.0",
     "validate-commit-msg": "^2.12.1",
     "webpack": "^2.3.3",
