--- a/client/.babelrc
+++ b/client/.babelrc
@@ -4,6 +4,7 @@
     ["es2015", {"modules": false}]
   ],
     "plugins": [
-      "transform-object-rest-spread"
+      "transform-object-rest-spread",
+      "lodash"
     ]
 }
