--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
   },
   "devDependencies": {
     "axios": "^0.16.0",
-    "babel-cli": "^6.24.0",
+    "babel-cli": "^6.24.1",
     "babel-istanbul": "^0.11.0",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "0.0.9",
     "babel-preset-es2015": "^6.24.0",
@@ -109,7 +110,7 @@
     "http-reject-empty": "^1.0.0",
     "in-production": "^1.0.1",
     "jsonwebtoken": "^7.1.9",
-    "lodash": "^4.17.2",
+    "lodash": "^4.17.4",
     "method-override": "^2.3.7",
     "mongoose": "^4.7.1",
     "mongoose-plugin-seed": "^0.4.0",
