feat(todo-mvc): added the todo redux client side to the project

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.24.0",
     "babili-webpack-plugin": "0.0.11",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-config-noamokman": "^5.2.0",
@@ -70,6 +71,7 @@
     "opn-cli": "^3.1.0",
     "plop": "^1.7.2",
     "plur": "^2.1.2",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
