--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,10 +1,20 @@
 {
   "presets": [
     "react",
-    ["es2015", {"modules": false}]
-  ],
-    "plugins": [
-      "transform-object-rest-spread",
-      "lodash"
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": [
+            "last 2 versions"
+          ]
+        },
+        "modules": false
+      }
     ]
+  ],
+  "plugins": [
+    "transform-object-rest-spread",
+    "lodash"
+  ]
 }
