--- a/package.json
+++ b/package.json
@@ -42,81 +42,78 @@
     ]
   },
   "devDependencies": {
-    "axios": "^0.16.0",
+    "axios": "^0.16.1",
     "babel-cli": "^6.24.1",
-    "babel-istanbul": "^0.11.0",
     "babel-jest": "^19.0.0",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "0.0.9",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-register": "^6.24.0",
-    "babili-webpack-plugin": "0.0.11",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "babili-webpack-plugin": "^0.0.11",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
-    "eslint-config-noamokman": "^5.2.0",
+    "eslint-config-noamokman": "^5.3.0",
     "eslint-plugin-react": "^6.10.3",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
-    "husky": "^0.11.9",
+    "husky": "^0.13.3",
     "jest": "^19.0.2",
-    "lint-staged": "^3.0.3",
-    "material-ui": "^0.17.1",
-    "mdi": "^1.9.33",
+    "lint-staged": "^3.4.0",
+    "material-ui": "^0.17.4",
     "nodemon": "^1.11.0",
-    "npm-run-all": "^3.1.2",
+    "npm-run-all": "^4.0.2",
     "opn-cli": "^3.1.0",
-    "plop": "^1.7.2",
+    "plop": "^1.7.4",
     "plur": "^2.1.2",
     "prop-types": "^15.5.8",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-async-connect": "^1.0.0-rc4",
-    "redux-auth-wrapper": "^1.0.0",
-    "redux-devtools": "^3.3.2",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.2.0",
+    "redux-auth-wrapper": "^1.1.0",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
     "redux-simple-promise": "^2.0.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.16.1",
     "supertest": "^3.0.0",
-    "uppercamelcase": "^1.1.0",
+    "uppercamelcase": "^3.0.0",
     "validate-commit-msg": "^2.12.1",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "bunyan": "^1.8.5",
+    "body-parser": "^1.17.1",
+    "bunyan": "^1.8.10",
     "bunyan-format": "^0.2.1",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
-    "dotenv-extended": "^1.0.4",
+    "dotenv-extended": "^2.0.0",
     "email-address": "^1.2.2",
     "env-bunyan": "^0.1.0",
-    "express": "^4.14.0",
+    "express": "^4.15.2",
     "express-async-router": "^0.1.12",
     "express-json-error-handler": "^1.0.0",
-    "express-jwt": "^5.1.0",
+    "express-jwt": "^5.3.0",
     "express-mongoose-errors": "^0.2.0",
     "express-param-objectid": "^1.0.0",
-    "http-errors": "^1.5.1",
+    "http-errors": "^1.6.1",
     "http-reject-empty": "^1.0.0",
     "in-production": "^1.0.1",
-    "jsonwebtoken": "^7.1.9",
+    "jsonwebtoken": "^7.4.0",
     "lodash": "^4.17.4",
-    "method-override": "^2.3.7",
-    "mongoose": "^4.7.1",
+    "method-override": "^2.3.8",
+    "mongoose": "^4.9.6",
     "mongoose-plugin-seed": "^0.4.0",
-    "morgan": "^1.7.0",
+    "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-local-mongoose": "^4.0.0",
     "pify": "^2.3.0"
