--- a/package.json
+++ b/package.json
@@ -41,6 +41,19 @@
       "git add"
     ]
   },
+  "jest": {
+    "notify": true,
+    "collectCoverage": true,
+    "testMatch": ["**/__tests__/**/*.spec.js"],
+    "coverageThreshold": {
+      "global": {
+        "branches": 20,
+        "functions": 20,
+        "lines": 20,
+        "statements": 20
+      }
+    }
+  },
   "devDependencies": {
     "axios": "^0.16.1",
     "babel-cli": "^6.24.1",
