--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
+    "redux-form": "^6.6.3",
     "redux-simple-promise": "^2.0.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.16.1",
