--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   "jest": {
     "notify": true,
     "collectCoverage": true,
-    "testMatch": ["**/__tests__/**/*.spec.js"],
+    "testMatch": [
+      "**/__tests__/**/*.spec.js"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 20,
@@ -91,6 +93,7 @@
     "redux": "^3.6.0",
     "redux-async-connect": "^1.0.0-rc4",
     "redux-auth-wrapper": "^1.1.0",
+    "redux-axios-middleware": "^4.0.0",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
