--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npm run lint && npm run jest",
     "jest": "jest",
     "babel": "babel server -d dist/server -s",
-    "build": "rimraf dist && npm run babel && npm run build-client && ncp package.json dist/package.json",
+    "copy": "copyfiles package.json .env.defaults .env.schema dist",
+    "build": "rimraf dist && npm run babel && npm run build-client && npm run copy",
     "build-client": "webpack --env=production --define process.env.NODE_ENV=\"'production'\"",
     "lint": "run-p lint-*",
     "precommit": "lint-staged",
@@ -68,6 +69,7 @@
     "babel-register": "^6.24.1",
     "babili-webpack-plugin": "^0.0.11",
     "classnames": "^2.2.5",
+    "copyfiles": "^1.2.0",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-config-noamokman": "^5.3.0",
