--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "server-dev": "nodemon --watch server --exec \"babel-node\" server/app.js",
     "client-dev": "webpack-dev-server --open",
     "prod": "npm run build && node dist/server/app.js",
-    "plop": "plop"
+    "plop": "plop",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -59,68 +60,68 @@
     }
   },
   "devDependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
-    "babel-jest": "^19.0.0",
-    "babel-loader": "^7.0.0",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.1.1",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
-    "babili-webpack-plugin": "^0.0.11",
+    "babili-webpack-plugin": "^0.1.2",
     "classnames": "^2.2.5",
     "copyfiles": "^1.2.0",
-    "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
+    "css-loader": "^0.28.4",
+    "eslint": "^4.1.1",
     "eslint-config-noamokman": "^5.3.0",
-    "eslint-plugin-react": "^6.10.3",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
-    "husky": "^0.13.3",
-    "jest": "^19.0.2",
-    "lint-staged": "^3.4.0",
-    "material-ui": "^0.17.4",
+    "eslint-plugin-react": "^7.1.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.29.0",
+    "husky": "^0.14.1",
+    "jest": "^20.0.4",
+    "lint-staged": "^4.0.0",
+    "material-ui": "^0.18.5",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "opn-cli": "^3.1.0",
-    "plop": "^1.7.4",
+    "plop": "^1.8.0",
     "plur": "^2.1.2",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
-    "redux-actions": "^2.0.2",
+    "redux": "^3.7.1",
+    "redux-actions": "^2.0.3",
     "redux-async-connect": "^1.0.0-rc4",
     "redux-auth-wrapper": "^1.1.0",
     "redux-axios-middleware": "^4.0.0",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
-    "redux-form": "^6.6.3",
+    "redux-form": "^6.8.0",
     "redux-simple-promise": "^2.0.2",
     "rimraf": "^2.6.1",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.18.2",
     "supertest": "^3.0.0",
     "uppercamelcase": "^3.0.0",
-    "validate-commit-msg": "^2.12.1",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5"
+    "validate-commit-msg": "^2.12.2",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.17.2",
     "bunyan": "^1.8.10",
     "bunyan-format": "^0.2.1",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
-    "dotenv-extended": "^2.0.0",
+    "dotenv-extended": "^2.0.1",
     "email-address": "^1.2.2",
     "env-bunyan": "^0.1.0",
-    "express": "^4.15.2",
+    "express": "^4.15.3",
     "express-async-router": "^0.1.12",
     "express-json-error-handler": "^1.0.0",
     "express-jwt": "^5.3.0",
@@ -129,14 +130,14 @@
     "http-errors": "^1.6.1",
     "http-reject-empty": "^1.0.0",
     "in-production": "^1.0.1",
-    "jsonwebtoken": "^7.4.0",
+    "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
-    "method-override": "^2.3.8",
-    "mongoose": "^4.9.6",
+    "method-override": "^2.3.9",
+    "mongoose": "^4.11.0",
     "mongoose-plugin-seed": "^0.4.0",
-    "morgan": "^1.8.1",
+    "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-local-mongoose": "^4.0.0",
-    "pify": "^2.3.0"
+    "pify": "^3.0.0"
   }
 }
