--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "classnames": "^2.2.5",
     "copyfiles": "^1.2.0",
     "css-loader": "^0.28.4",
-    "eslint": "^4.1.1",
+    "eslint": "^4.2.0",
     "eslint-config-noamokman": "^5.3.0",
     "eslint-plugin-react": "^7.1.0",
     "file-loader": "^0.11.2",
@@ -94,7 +94,7 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.7.1",
+    "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-async-connect": "^1.0.0-rc4",
     "redux-auth-wrapper": "^1.1.0",
@@ -104,19 +104,21 @@
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-form": "^6.8.0",
     "redux-simple-promise": "^2.0.2",
+    "reflexbox": "^3.0.0-0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
+    "styled-components": "^2.1.1",
     "supertest": "^3.0.0",
     "uppercamelcase": "^3.0.0",
     "validate-commit-msg": "^2.12.2",
-    "webpack": "^3.1.0",
+    "webpack": "^3.2.0",
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
     "bunyan": "^1.8.10",
     "bunyan-format": "^0.2.1",
-    "compression": "^1.6.2",
+    "compression": "^1.7.0",
     "cookie-parser": "^1.4.3",
     "dotenv-extended": "^2.0.1",
     "email-address": "^1.2.2",
