feat(client): height change animation

--- a/package.json
+++ b/package.json
@@ -89,7 +89,9 @@
     "plur": "^2.1.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-collapse": "^4.0.2",
     "react-dom": "^15.6.1",
+    "react-motion": "^0.5.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
