--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
   "devDependencies": {
     "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
@@ -81,12 +83,14 @@
     "husky": "^0.14.3",
     "jest": "^20.0.4",
     "lint-staged": "^4.0.2",
+    "loadable-components": "^0.2.0",
     "material-ui": "^0.18.6",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "opn-cli": "^3.1.0",
     "plop": "^1.8.0",
     "plur": "^2.1.2",
+    "preload-webpack-plugin": "^1.2.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-collapse": "^4.0.2",
