feat(compression): added asset compression

--- a/package.json
+++ b/package.json
@@ -73,11 +73,13 @@
     "babel-register": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
     "classnames": "^2.2.5",
+    "compression-webpack-plugin": "^1.0.0",
     "copyfiles": "^1.2.0",
     "css-loader": "^0.28.4",
     "eslint": "^4.3.0",
     "eslint-config-noamokman": "^5.3.0",
     "eslint-plugin-react": "^7.1.0",
+    "express-static-gzip": "^0.3.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
     "husky": "^0.14.3",
