--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
   "jest": {
     "notify": true,
     "collectCoverage": true,
+    "setupFiles": [
+      "jest-localstorage-mock"
+    ],
     "testMatch": [
       "**/__tests__/**/*.spec.js"
     ],
@@ -66,8 +69,10 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
@@ -84,6 +89,7 @@
     "html-webpack-plugin": "^2.29.0",
     "husky": "^0.14.3",
     "jest": "^20.0.4",
+    "jest-localstorage-mock": "^1.2.0",
     "lint-staged": "^4.0.2",
     "loadable-components": "^0.2.0",
     "material-ui": "^0.18.7",
@@ -102,6 +108,7 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
+    "react-test-renderer": "^15.6.1",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-auth-wrapper": "^2.0.1",
@@ -110,6 +117,7 @@
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-form": "^7.0.3",
+    "redux-mock-store": "^1.2.3",
     "redux-simple-promise": "^2.0.2",
     "redux-sockets": "^1.0.0",
     "reflexbox": "^3.0.0-0",
