--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-form": "^7.0.3",
     "redux-simple-promise": "^2.0.2",
+    "redux-sockets": "^1.0.0",
     "reflexbox": "^3.0.0-0",
     "rimraf": "^2.6.1",
     "socket.io-client": "^2.0.3",
