--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "jest": {
     "notify": true,
+    "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js",
     "collectCoverage": true,
     "setupFiles": [
       "jest-localstorage-mock"
@@ -82,6 +83,7 @@
     "compression-webpack-plugin": "^1.0.0",
     "copyfiles": "^1.2.0",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
     "eslint": "^4.3.0",
     "eslint-config-noamokman": "^6.0.1",
     "eslint-plugin-react": "^7.1.0",
@@ -89,6 +91,7 @@
     "html-webpack-plugin": "^2.29.0",
     "husky": "^0.14.3",
     "jest": "^20.0.4",
+    "jest-enzyme": "^3.7.0",
     "jest-localstorage-mock": "^1.2.0",
     "lint-staged": "^4.0.2",
     "loadable-components": "^0.2.0",
