--- a/client/.babelrc
+++ b/client/.babelrc
@@ -20,7 +20,10 @@
   ],
   "env": {
     "test": {
-      "plugins": ["dynamic-import-node", "transform-es2015-modules-commonjs"]
+      "plugins": [
+        "dynamic-import-node",
+        "transform-es2015-modules-commonjs"
+      ]
     }
   }
 }
