test(client): cilent routing tests

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "jest": {
     "notify": true,
+    "testURL": "http://localhost",
     "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js",
     "collectCoverage": true,
     "setupFiles": [
