feat(generator): replace template names

--- a/static/.env.defaults
+++ b/static/.env.defaults
@@ -1,4 +1,4 @@
 PORT=9393
-MONGO_URI=mongodb://localhost/starter
+MONGO_URI=mongodb://localhost/PROJECT_NAME
 SEED_DB=false
-LOG_NAME=starter
+LOG_NAME=PROJECT_NAME
