--- a/static/docker-compose-prod.yml
+++ b/static/docker-compose-prod.yml
@@ -7,7 +7,7 @@ services:
     depends_on:
      - mongo
     environment:
-     - MONGO_URI=mongodb://mongo/starter
+     - MONGO_URI=mongodb://mongo/PROJECT_NAME
      - NODE_ENV=production
      - SESSION_SECRET=secret
   mongo:
