--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "commitmsg": "validate-commit-msg",
     "babel": "babel src -d lib -s",
     "build": "rimraf lib && npm run babel",
-    "jest": "jest",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "prepublishOnly": "npm run build",
-    "test": "run-s lint jest test-dump",
+    "test": "run-s lint test-dump",
     "dump": "npm run build && rimraf dump && node bin/project-starter dump",
-    "test-dump": "npm run dump && cd dump && npm install && npm test"
+    "test-dump": "npm run dump && cd dump && npm install && npm run lint && npm run test-client"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/noamokman/project-starter.git"
   },
-  "keywords": [],
+  "keywords": [
+    "react",
+    "starter",
+    "generator",
+    "project"
+  ],
   "author": "Noam Okman <noamokman@gmail.com> (https://github.com/noamokman)",
   "license": "MIT",
   "bugs": {
@@ -40,24 +43,14 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-jest": "^20.0.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "coveralls": "^2.13.1",
-    "cpr": "^2.2.0",
     "eslint": "^4.5.0",
     "eslint-config-noamokman": "^6.0.1",
-    "execa": "^0.8.0",
     "husky": "^0.14.3",
-    "jest": "^20.0.4",
-    "jsonfile": "^3.0.1",
     "lint-staged": "^4.0.4",
     "npm-run-all": "^4.0.2",
-    "pify": "^3.0.0",
-    "replace-in-file": "^2.6.2",
     "rimraf": "^2.6.1",
-    "snake-case": "^2.1.0",
-    "title-case": "^2.1.1",
     "validate-commit-msg": "^2.14.0"
   },
   "jest": {
@@ -77,6 +70,13 @@
   },
   "dependencies": {
     "caporal": "^0.7.0",
+    "cpr": "^2.2.0",
+    "execa": "^0.8.0",
+    "jsonfile": "^3.0.1",
+    "pify": "^3.0.0",
+    "replace-in-file": "^2.6.2",
+    "snake-case": "^2.1.0",
+    "title-case": "^2.1.1",
     "update-notifier": "^2.2.0"
   },
   "bin": "bin/project-starter"
