--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "run-s lint test-dump",
     "dump": "npm run build && rimraf dump && node bin/project-starter dump/starter",
     "test-dump": "npm run dump && cd dump/starter && npm install && npm run lint && npm run jest-client",
-    "release-module": "git-directory-deploy --email travis@travis-ci.org --user 'Travis CI' --directory dump/starter --branch master --repo https://$GH_TOKEN@github.com/noamokman/project-starter-sample.git"
+    "release": "git-directory-deploy --email travis@travis-ci.org --user 'Travis CI' --directory dump/starter --branch master --repo https://$GH_TOKEN@github.com/noamokman/project-starter-sample.git"
   },
   "repository": {
     "type": "git",
