--- a/package.json
+++ b/package.json
@@ -43,16 +43,19 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^4.2.2",
-    "@commitlint/config-angular": "^4.2.1",
+    "@commitlint/cli": "^5.1.1",
+    "@commitlint/config-angular": "^5.1.1",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "eslint": "^4.10.0",
-    "eslint-config-noamokman": "^7.0.1",
+    "eslint": "^4.12.0",
+    "eslint-config-noamokman": "^7.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-lodash": "^2.5.0",
+    "eslint-plugin-unicorn": "^3.0.0",
     "git-directory-deploy": "^1.5.1",
     "husky": "^0.14.3",
-    "lint-staged": "^4.3.0",
+    "lint-staged": "^5.0.0",
     "npm-run-all": "^4.1.2",
     "rimraf": "^2.6.2"
   },
