--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "lib/index.js",
   "module": "src/index.js",
   "scripts": {
-    "lint": "run-p lint-*",
-    "lint-src": "eslint src --fix",
-    "lint-tests": "eslint __tests__ --fix",
+    "lint": "eslint src --fix",
     "precommit": "lint-staged",
     "commitmsg": "commitlint -e",
     "babel": "babel src -d lib -s",
@@ -39,7 +37,7 @@
   },
   "homepage": "https://github.com/noamokman/project-starter#readme",
   "engines": {
-    "node": ">=6"
+    "node": ">=8"
   },
   "lint-staged": {
     "*.js": [
@@ -48,36 +46,36 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^5.2.5",
-    "@commitlint/config-angular": "^5.1.1",
+    "@commitlint/cli": "^7.0.0",
+    "@commitlint/config-angular": "^7.0.1",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^4.13.1",
-    "eslint-config-noamokman": "^7.2.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-lodash": "^2.5.0",
-    "eslint-plugin-unicorn": "^3.0.1",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^5.2.0",
+    "eslint-config-noamokman": "^8.0.1",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-lodash": "^2.7.0",
+    "eslint-plugin-unicorn": "^4.0.3",
     "git-directory-deploy": "^1.5.1",
     "husky": "^0.14.3",
-    "lint-staged": "^6.0.0",
-    "npm-run-all": "^4.1.2",
+    "lint-staged": "^7.2.0",
+    "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2"
   },
   "dependencies": {
-    "caporal": "^0.9.0",
+    "caporal": "^0.10.0",
     "cpr": "^3.0.1",
-    "execa": "^0.8.0",
+    "execa": "^0.10.0",
     "handlebars": "^4.0.11",
     "p-catch-if": "^1.0.2",
     "parse-github-url": "^1.0.2",
     "pify": "^3.0.0",
-    "read-pkg": "^3.0.0",
-    "replace-in-file": "^3.0.0",
+    "read-pkg": "^4.0.1",
+    "replace-in-file": "^3.4.0",
     "snake-case": "^2.1.0",
     "title-case": "^2.1.1",
-    "update-notifier": "^2.3.0",
-    "write-pkg": "^3.1.0"
+    "update-notifier": "^2.5.0",
+    "write-pkg": "^3.2.0"
   },
   "bin": {
     "project-starter": "bin/project-starter"
